# hatch-requirements-context-formatting-test

./: LICENSE.txt  README.md  pyproject.toml
src/hatch_foo_builder/: pyproject.toml
src/hatch_foo_builder/src/hatch_foo_builder/: builder.py  hooks.py
src/hatch_requirements_context_formatting_test/: __about__.py
tests/: __init__.py
